# SoccerRL

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
Coordinator/: Makefile  RobotTracker.py  ldflags
Coordinator/src/: BallTracker.cpp  BallTracker.hpp  HSVRange.cpp  MarkerFinder.cpp  MarkerFinder.hpp  RobotTracker.cpp  RobotTracker.hpp  main.cpp
Headstart/: Headstart.pde  MyClient.pde  Packet.pde  PacketStore.pde  Processor.pde  Proximity.pde  device.pde  logic.pde  motor.pde  protocable.pde  protocol.pde  vehicle.pde
Processing/: Keyboard.pde  Marcel_headstart.pde  MyClient.pde  PacketStore.pde  Processor.pde  headstart.pde  logic.pde  protocol.pde  skeleton.pde
Report/: title_page.tex
SimulatedRL/: CMakeLists.txt
SimulatedRL/include/: ActionValueFunction.hpp  Constants.hpp  Functions.hpp  Globals.hpp  SarsaParams.hpp  Simulator.hpp  Tiles.hpp  TrueOnlineSarsaUpdate.hpp
SimulatedRL/src/: Functions.cpp  Simulator.cpp  Tiles.cpp  TrueOnlineSarsaUpdate.cpp  main.cpp
Tracker/: Makefile
Tracker/include/: ActionValueFunction.hpp  Constants.hpp  Globals.hpp  Robot.hpp  SarsaParams.hpp
Tracker/src/: BallTracker.cpp  BallTracker.hpp  Constants.hpp  Functions.cpp  Functions.hpp  MarkerFinder.cpp  MarkerFinder.hpp  RobotTracker.cpp  RobotTracker.hpp  Tiles.cpp  calibrate_camera.cpp  create_charuco_board.cpp  main.cpp
